--- a/.env.example
+++ b/.env.example
@@ -20,4 +20,4 @@ LLM_MODEL=
 
 # Nitter Configuration (预留，后续版本使用)
 # 多个实例用逗号分隔，程序会按顺序尝试或随机选择
-NITTER_INSTANCES=https://xcancel.com,https://nuke.trabun.org
+NITTER_INSTANCES=https://xcancel.com,https://nuke.trabun.org,https://nitter.space,https://nuku.trabun.org,https://lightbrd.com,https://nitter.privacyredirect.com,https://nitter.net,https://nitter.tiekoetter.com
