优化采集间隔

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,19 @@ TZ=Asia/Shanghai
 LLM_API_KEY=
 LLM_MODEL=
 
-# Nitter Configuration (预留，后续版本使用)
-# 多个实例用逗号分隔，程序会按顺序尝试或随机选择
-NITTER_INSTANCES=https://xcancel.com,https://nuke.trabun.org,https://nitter.space,https://nuku.trabun.org,https://lightbrd.com,https://nitter.privacyredirect.com,https://nitter.net,https://nitter.tiekoetter.com
+# Crawler Configuration
+CRAWLER_TIMEOUT=30
+CRAWLER_RETRY=3
+CRAWLER_DELAY=1.0
+# HTTP 请求重试次数（针对单次请求失败的重试）
+HTTP_RETRY_COUNT=3
+# HTTP 请求重试间隔（秒）- 每次重试前的等待时间
+HTTP_RETRY_DELAY=2
+
+# Crawl Loop Configuration
+# 采集循环间隔时间（秒）- 每次采集完成后等待多久再开始下一轮
+CRAWL_INTERVAL=60
+# 用户采集间隔时间（秒）- 只采集距上次采集超过此时间的用户
+CRAWL_USER_INTERVAL=180
+# 单个用户预估采集时间（秒）- 用于动态计算锁超时时间
+ESTIMATED_TIME_PER_USER=5
