--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,10 @@ REDIS_PASSWORD=your_redis_password_here
 APP_ENV=development
 TZ=Asia/Shanghai
 
-# LLM Configuration (预留，后续版本使用)
-LLM_API_KEY=
-LLM_MODEL=
+# LLM Configuration
+LLM_API_KEY=your_api_key_here
+LLM_API_URL=https://api.openai.com/v1
+LLM_MODEL=gpt-3.5-turbo
 
 # Crawler Configuration
 CRAWLER_TIMEOUT=30
