--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,7 @@ CRAWL_INTERVAL=60
 CRAWL_USER_INTERVAL=180
 # 单个用户预估采集时间（秒）- 用于动态计算锁超时时间
 ESTIMATED_TIME_PER_USER=5
+
+# Tweet Processing Configuration
+# 启用24小时过期判断（true/false）- 超过24小时的推文自动标记为 P6
+ENABLE_24H_EXPIRATION=true
