--- a/.env.example
+++ b/.env.example
@@ -37,5 +37,7 @@ CRAWL_USER_INTERVAL=180
 ESTIMATED_TIME_PER_USER=5
 
 # Tweet Processing Configuration
-# 启用24小时过期判断（true/false）- 超过24小时的推文自动标记为 P6
+# 启用推文过期判断（true/false）- 超过指定时间的推文自动标记为 P6
 ENABLE_24H_EXPIRATION=true
+# 推文过期时间阈值（小时）- 默认24小时
+TWEET_EXPIRATION_HOURS=24
