实现对ios消息推送

--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,16 @@ ESTIMATED_TIME_PER_USER=5
 ENABLE_24H_EXPIRATION=true
 # 推文过期时间阈值（小时）- 默认24小时
 TWEET_EXPIRATION_HOURS=24
+
+# ==================== Bark 推送配置 ====================
+# Bark 推送开关（默认启用）
+BARK_PUSH_ENABLED=true
+# 推送级别（逗号分隔）
+BARK_PUSH_GRADES=P0,P1,P2
+# 推送图标（比特币/加密货币）
+# 可选图标：
+# 💰 钱袋: https://em-content.zobj.net/source/apple/391/money-bag_1f4b0.png
+# 🪙 金币: https://em-content.zobj.net/source/apple/391/coin_1fa99.png
+# 💵 美元: https://em-content.zobj.net/source/apple/391/dollar-banknote_1f4b5.png
+# 📈 上涨图表: https://em-content.zobj.net/source/apple/391/chart-increasing_1f4c8.png
+BARK_PUSH_ICON=https://em-content.zobj.net/source/apple/391/money-bag_1f4b0.png
