移除非必要文件

--- a/.gitignore
+++ b/.gitignore
@@ -199,5 +199,13 @@ data/
 *.db
 *.sqlite
 
+# Service runtime files
 .service_info
 .service_pids
+
+# macOS
+.DS_Store
+
+# Test scripts (for local testing only)
+test_*.py
+CHANGELOG.md
