--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,16 @@ BARK_PUSH_GRADES=P0,P1,P2
 # 💵 美元: https://em-content.zobj.net/source/apple/391/dollar-banknote_1f4b5.png
 # 📈 上涨图表: https://em-content.zobj.net/source/apple/391/chart-increasing_1f4c8.png
 BARK_PUSH_ICON=https://em-content.zobj.net/source/apple/391/money-bag_1f4b0.png
+
+# ==================== Ollama 本地筛选配置 ====================
+# Ollama 筛选开关（默认禁用，手动启用）
+OLLAMA_ENABLED=false
+
+# Ollama 服务地址（默认本地）
+OLLAMA_BASE_URL=http://localhost:11434
+
+# Ollama 使用的模型（qwen2.5:3b 快速且足够准确）
+OLLAMA_MODEL=qwen2.5:3b
+
+# Ollama 超时时间（秒，本地模型建议较短）
+OLLAMA_TIMEOUT=10
