--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 langchain==0.3.13
-langchain-core==1.2.5
+langchain-core>=0.3.26,<0.4.0
 langchain-ollama==1.0.1
 langchain-openai==0.2.14
 langchain-text-splitters==0.3.4
