--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ langchain-core>=0.3.26,<0.4.0
 langchain-ollama==1.0.1
 langchain-openai==0.2.14
 langchain-text-splitters==0.3.4
-langsmith==0.5.1
+langsmith>=0.1.17,<0.3
 MarkupSafe==3.0.3
 mpmath==1.3.0
 multidict==6.7.0
