--- a/requirements.txt
+++ b/requirements.txt
@@ -32,12 +32,12 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
-langchain==0.3.13
-langchain-core>=0.3.26,<0.4.0
-langchain-ollama==1.0.1
-langchain-openai==0.2.14
-langchain-text-splitters==0.3.4
-langsmith>=0.1.17,<0.3
+langchain>=0.3.0
+langchain-core
+langchain-ollama
+langchain-openai
+langchain-text-splitters
+langsmith<0.3
 MarkupSafe==3.0.3
 mpmath==1.3.0
 multidict==6.7.0
